--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,17 @@ services:
     env_file: .env
     ports:
       - 5432:5432
+    volumes:
+      - db_data:/var/lib/postgresql/data
+
+  api:
+    build: ./matcha_api
+    env_file: .env
+    restart: always
+    ports:
+      - 8000:8000
+    depends_on:
+      - db
+
+volumes:
+  db_data:
