--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
 POSTGRES_USER=test
 POSTGRES_PASSWORD=test
 POSTGRES_DB=matcha
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_EMAIL=artemforkunov@gmail.com
+SMTP_PASSWORD=
+
+JWT_SECRET=secret
+
+
 JWT_SECRET=secret
