--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,14 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
 
-  # api:
-  #   build: ./matcha_api
-  #   env_file: .env
-  #   restart: always
-  #   ports:
-  #     - 8000:8000
-  #   depends_on:
-  #     - db
+  api:
+    build: ./matcha_api
+    env_file: .env
+    restart: always
+    ports:
+      - 8000:8000
+    depends_on:
+      - db
 
 volumes:
   db_data:
