--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,33 @@ services:
     image: postgres
     restart: always
     env_file: .env
-    ports:
-      - 5432:5432
     volumes:
       - db_data:/var/lib/postgresql/data
+    # ports:
+    #   - 5432:5432
 
   api:
     build: ./matcha_api
-    env_file: .env
     restart: always
-    ports:
-      - 8000:8000
+    env_file: .env
+    volumes:
+      - uploads:/usr/share/uploads
+    # ports:
+    #   - 8000:8000
     depends_on:
       - db
 
+  nginx:
+    build: ./matcha_nginx
+    restart: always
+    env_file: .env
+    volumes:
+      - uploads:/usr/share/nginx/html/uploads
+    ports:
+      - 80:80
+    depends_on:
+      - api
+
 volumes:
   db_data:
+  uploads:
