--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,7 @@ POSTGRES_DB=matcha
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_EMAIL=artemforkunov@gmail.com
+SMTP_EMAIL=
 SMTP_PASSWORD=
-
-JWT_SECRET=secret
-
 
 JWT_SECRET=secret
