--- a/matcha_front/package.json
+++ b/matcha_front/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "formik": "^2.4.1",
+    "http-proxy": "^1.18.1",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
