--- a/matcha_front/package.json
+++ b/matcha_front/package.json
@@ -16,11 +16,11 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "formik": "^2.4.1",
-    "http-proxy": "^1.18.1",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-images-uploading": "^3.1.7",
     "sass": "^1.63.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
