--- a/matcha_front/package.json
+++ b/matcha_front/package.json
@@ -9,29 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.0",
-    "@types/react": "18.2.11",
-    "@types/react-dom": "18.2.4",
+    "@types/node": "20.4.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
-    "formik": "^2.4.1",
-    "next": "13.4.5",
-    "postcss": "8.4.24",
+    "formik": "^2.4.2",
+    "next": "13.4.9",
+    "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-images-uploading": "^3.1.7",
-    "sass": "^1.63.3",
+    "sass": "^1.63.6",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3",
+    "typescript": "5.1.6",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "eslint": "8.44.0",
+    "eslint-config-next": "^13.4.9",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8",
