--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     env_file: .env
     volumes:
       - db_data:/var/lib/postgresql/data
-    # ports:
-    #   - 5432:5432
+    ports:
+      - 5432:5432
 
   api:
     build: ./matcha_api
@@ -14,8 +14,6 @@ services:
     env_file: .env
     volumes:
       - uploads:/usr/share/uploads
-    # ports:
-    #   - 8000:8000
     depends_on:
       - db
 
