--- a/matcha_front/package.json
+++ b/matcha_front/package.json
@@ -17,6 +17,8 @@
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "sass": "^1.63.6",
