--- a/matcha_nginx/default.conf.template
+++ b/matcha_nginx/default.conf.template
@@ -1,6 +1,8 @@
 server {
         listen 80;
 
+        client_max_body_size 100M;
+
         location /api/ {
                 rewrite          /api/(.*) /$1 break;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
