--- a/matcha_nginx/default.conf.template
+++ b/matcha_nginx/default.conf.template
@@ -10,6 +10,16 @@ server {
                 proxy_pass       http://api:8000;
         }
 
+        location /api/ws/ {
+                rewrite          /api/(.*) /$1 break;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header Host $host;
+                proxy_pass       http://api:8000;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
+        }
+
         location /uploads/ {
                 root      /usr/share/nginx/html;
         }
