--- a/matcha_front/package.json
+++ b/matcha_front/package.json
@@ -22,6 +22,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-slider": "^2.0.6",
     "react-use-websocket": "^4.3.1",
     "sass": "^1.64.2",
     "tailwindcss": "3.3.3",
@@ -29,6 +30,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/react-slider": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "eslint": "8.46.0",
