--- a/matcha_front/package.json
+++ b/matcha_front/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.22.6",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@types/react-slider": "^1.3.1",
     "autoprefixer": "10.4.14",
     "date-fns": "^2.30.0",
     "formik": "^2.4.3",
@@ -22,7 +24,6 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "@types/react-slider": "^1.3.1",
     "react-slider": "^2.0.6",
     "react-use-websocket": "^4.3.1",
     "sass": "^1.64.2",
