front to docker

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,10 @@ SMTP_PORT=587
 SMTP_EMAIL=
 SMTP_PASSWORD=
 
-JWT_SECRET=secret
+FRONT_BASE_URL=http://localhost
+
+NEXT_PUBLIC_BASE_URL=http://localhost
+NEXT_PUBLIC_WS_BASE_URL=ws://localhost
+NEXT_PUBLIC_GEOLOCATIONDB_KEY=
+
+JWT_SECRET=
