--- a/matcha_front/package.json
+++ b/matcha_front/package.json
@@ -27,6 +27,7 @@
     "react-slider": "^2.0.6",
     "react-use-websocket": "^4.3.1",
     "sass": "^1.64.2",
+    "sharp": "^0.32.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
