--- a/matcha_nginx/default.conf.template
+++ b/matcha_nginx/default.conf.template
@@ -3,11 +3,11 @@ server {
 
         client_max_body_size 100M;
 
-        location / {
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header Host $host;
-                proxy_pass       http://front:3000;
-        }
+        #location / {
+        #        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #        proxy_set_header Host $host;
+        #        proxy_pass       http://front:3000;
+        #}
 
         location /api/ {
                 rewrite          /api/(.*) /$1 break;
