--- a/matcha_front/package.json
+++ b/matcha_front/package.json
@@ -23,6 +23,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
+    "react-double-marquee": "^1.1.0",
     "react-icons": "^4.10.1",
     "react-slider": "^2.0.6",
     "react-use-websocket": "^4.3.1",
