--- a/matcha_front/package.json
+++ b/matcha_front/package.json
@@ -14,7 +14,6 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@types/react-slider": "^1.3.1",
-    "autoprefixer": "10.4.15",
     "date-fns": "^2.30.0",
     "formik": "^2.4.3",
     "next": "13.4.19",
@@ -37,6 +36,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "autoprefixer": "^10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "^13.4.19",
     "eslint-config-prettier": "^9.0.0",
