--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     build: ./matcha_api
     restart: always
     env_file: .env
+    platform: linux/amd64
     volumes:
       - uploads:/usr/share/uploads
     depends_on:
