remove redundant package lock and update env example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-POSTGRES_USER=test
-POSTGRES_PASSWORD=test
+POSTGRES_USER=matcha
+POSTGRES_PASSWORD=matcha
 POSTGRES_DB=matcha
 
 SMTP_HOST=smtp.gmail.com
@@ -9,7 +9,8 @@ SMTP_PASSWORD=
 
 FRONT_BASE_URL=http://localhost
 
-NEXT_PUBLIC_BASE_URL=http://localhost
+NEXT_PUBLIC_FRONT_BASE_URL=http://localhost
+NEXT_PUBLIC_BACK_BASE_URL=http://nginx
 NEXT_PUBLIC_WS_BASE_URL=ws://localhost
 NEXT_PUBLIC_GEOLOCATIONDB_KEY=
 
